// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 1`] = `
{
  "bytes": 67595,
  "sha256": "cd4501e68b60d429dc3d9933bd350f3894a248789a73e620f950ec105ad4dc1f",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 2`] = `
{
  "bytes": 67595,
  "sha256": "bff81aadcb4aa893ed0d21f0c5e604ddd8c35ca82feaa1aa91076f64f2558e48",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 3`] = `
{
  "bytes": 67595,
  "sha256": "c92b7384d9673f2f515d42c11ce9c338eacec2403863538bc373798624cf38e8",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 4`] = `
{
  "bytes": 67595,
  "sha256": "49b1e0a0f10d565e237692f172069034bca4f3b0a48f11b7c7b3cb4e4abc362a",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 5`] = `
{
  "bytes": 67595,
  "sha256": "eb37aa047f94a4209fb4bf6127ee7fedbdb93cba6247dc7911ee35121746ce11",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 6`] = `
{
  "bytes": 67595,
  "sha256": "ed223b361f47523a3bd4e601d557e344ee9bf9e0630cb77bcd3f8e5ba7df1897",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 7`] = `
{
  "bytes": 67595,
  "sha256": "c189cab592b88f536166f7100a276fa5761c08d725fbd537d1b42846012d463a",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 8`] = `
{
  "bytes": 67595,
  "sha256": "b4cd59d1bae5c23795e40bcf1f5d7a0cab9094fd1d47c82cb83952e62eda094c",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 9`] = `
{
  "bytes": 67595,
  "sha256": "59fe0423e13fdfef60550244eea6654dd7b6069fa8221fd4440d9b0d542a7f51",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 10`] = `
{
  "bytes": 67595,
  "sha256": "6c7c078b3c3c72325f09efc74009353e8b333ac8f0b3f84c08040ddb3359f3a8",
}
`;

exports[`pool command-hold row shortcuts > numbers and selects the settled first nine tasks in column order, excluding folded/collapsed bands > sidebar action output 11`] = `
{
  "bytes": 67595,
  "sha256": "6c7c078b3c3c72325f09efc74009353e8b333ac8f0b3f84c08040ddb3359f3a8",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-grandparent > sidebar action output 1`] = `
{
  "bytes": 39429,
  "sha256": "00f0dca28f8ca518de1fde7cdd0c960f8e636f59f881a4b1fd2556e51fb887a3",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-grandparent > sidebar action output 2`] = `
{
  "bytes": 39430,
  "sha256": "32877e738a1be0bd3f0a683896acbdf03275bb75aa1845498ff97a67719cff54",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-parent > sidebar action output 1`] = `
{
  "bytes": 43033,
  "sha256": "ad99b4e0fa841ad46bfe7b9807e7d87b8ef0c5b1d385a87fedc9d1acaad6c89e",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-parent > sidebar action output 2`] = `
{
  "bytes": 43035,
  "sha256": "9c82188c02a8f2966b0357a284b8a330c63237857aa4e556b50ebc0def27c8e3",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-starter > sidebar action output 1`] = `
{
  "bytes": 42518,
  "sha256": "7985a311d2ebfdcbf96d0ed3df6d024f530a181e718c6cbf29ebcc1a878781b3",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for archived-starter > sidebar action output 2`] = `
{
  "bytes": 42518,
  "sha256": "d883ce014583376707ccb263e1dae6c4880087a838cdf051e8717c418accc4cc",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for deleted-parent > sidebar action output 1`] = `
{
  "bytes": 43033,
  "sha256": "ad99b4e0fa841ad46bfe7b9807e7d87b8ef0c5b1d385a87fedc9d1acaad6c89e",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for deleted-parent > sidebar action output 2`] = `
{
  "bytes": 43035,
  "sha256": "9c82188c02a8f2966b0357a284b8a330c63237857aa4e556b50ebc0def27c8e3",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for departed-spin > sidebar action output 1`] = `
{
  "bytes": 45113,
  "sha256": "677f9f0ea28e241b866200cae11ccee66f714e1c2e2b69c864a2c1e5b45b5181",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for departed-spin > sidebar action output 2`] = `
{
  "bytes": 45113,
  "sha256": "2988d6533b7bd176f469c21c16878e5dd11561fc365670b645a2d4be7cca8a68",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for filed-chain > sidebar action output 1`] = `
{
  "bytes": 41370,
  "sha256": "6c31a2c95ea02848d096cc5abfd336d1179ce8b8eac448b6ec4cad668d67f641",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for filed-chain > sidebar action output 2`] = `
{
  "bytes": 41371,
  "sha256": "e8cde231137cd6c23d3415cdb0a1e78031a4e4a58796d0976048f807376fb675",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for grandchild > sidebar action output 1`] = `
{
  "bytes": 43168,
  "sha256": "9047cab5fa847c55d0170946b184eccc8707d5f0a3a71e64c8f7bea8552a5efa",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for grandchild > sidebar action output 2`] = `
{
  "bytes": 43171,
  "sha256": "3580301a026a37d152505f55f2ce8d3109d0dfa2b0d051797a7f411fdd161df0",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 1`] = `
{
  "bytes": 42644,
  "sha256": "3d53e2c11c190031c8ee8909a8fb0473e671052d9dfb095f07ba23fbf330d578",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 2`] = `
{
  "bytes": 42644,
  "sha256": "4178d112b987574d388b8dd0170bd3b2d92d274aed1e972a07c8838846c73059",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 3`] = `
{
  "bytes": 42687,
  "sha256": "894080b3df275539d93dbae8059fc383af84447e2b7413b0cbabbc7fc63039fa",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 4`] = `
{
  "bytes": 42644,
  "sha256": "4178d112b987574d388b8dd0170bd3b2d92d274aed1e972a07c8838846c73059",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 5`] = `
{
  "bytes": 42687,
  "sha256": "894080b3df275539d93dbae8059fc383af84447e2b7413b0cbabbc7fc63039fa",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for headless-starter > sidebar action output 6`] = `
{
  "bytes": 42644,
  "sha256": "4178d112b987574d388b8dd0170bd3b2d92d274aed1e972a07c8838846c73059",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for resume-collapsed-pane > sidebar action output 1`] = `
{
  "bytes": 42536,
  "sha256": "1af60a24204a11011d68e9850432ac5a589434308f9c673183b011ad17bd0889",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for resume-collapsed-pane > sidebar action output 2`] = `
{
  "bytes": 42536,
  "sha256": "6692cc08475897da611b5b053f9ff78904d8e6de251e752b9196c2200c984773",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for resume-collapsed-starter > sidebar action output 1`] = `
{
  "bytes": 44356,
  "sha256": "693414a16445395cc74f3da1b39365407dc6f7583b01eb7bf721c8899c084415",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for resume-collapsed-starter > sidebar action output 2`] = `
{
  "bytes": 44358,
  "sha256": "e3ce5834332e2f1b06a9fef3778bffc90158442091e22babf59d4df4a1ac0b3a",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for shell-and-guest > sidebar action output 1`] = `
{
  "bytes": 52486,
  "sha256": "2ad8568340c75325ff01c61426ea7a5357e488f0a05150c3c252e2d31b77585c",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for shell-and-guest > sidebar action output 2`] = `
{
  "bytes": 52487,
  "sha256": "bbf0f7c29f2bf5ec9e728b013a9d71a472846bb4db58dd0599e9b7d3baaeb9df",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for unstarted-spin > sidebar action output 1`] = `
{
  "bytes": 45097,
  "sha256": "a02410c8344d2e6fe5f0252e9ec8a3f99c43046d96d044aff093de9395835dc1",
}
`;

exports[`pool navigation uses the existing gesture semantics > chooses the same mission pane as legacy for unstarted-spin > sidebar action output 2`] = `
{
  "bytes": 45097,
  "sha256": "b348b668e68b5f23d44bc8887404206b1d7816a379fdb29bf67c28cec268f463",
}
`;

exports[`pool navigation uses the existing gesture semantics > keeps a mission file pane, avoids redundant/file traces, and still focuses a sessionless child > sidebar action output 1`] = `
{
  "bytes": 44356,
  "sha256": "140991f472b4d5328dee75f8cffef4cd354ad03d3eae3e3855e9158f289db690",
}
`;

exports[`pool navigation uses the existing gesture semantics > selects a worktree and its explicit panel with the same trace and mark-read actions > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "25557ba4883859255b6575a0cd7437bae34fa050096fc2169bcc47c56d270057",
}
`;

exports[`pool navigation uses the existing gesture semantics > selects a worktree and its explicit panel with the same trace and mark-read actions > sidebar action output 2`] = `
{
  "bytes": 45021,
  "sha256": "560b2956b49a145cca300629eede4a361495a5e38ca2b3a126722864a6c02f82",
}
`;

exports[`pool navigation uses the existing gesture semantics > selects a worktree and its explicit panel with the same trace and mark-read actions > sidebar action output 3`] = `
{
  "bytes": 45021,
  "sha256": "560b2956b49a145cca300629eede4a361495a5e38ca2b3a126722864a6c02f82",
}
`;

exports[`pool navigation uses the existing gesture semantics > selects a worktree and its explicit panel with the same trace and mark-read actions > sidebar action output 4`] = `
{
  "bytes": 45021,
  "sha256": "560b2956b49a145cca300629eede4a361495a5e38ca2b3a126722864a6c02f82",
}
`;

exports[`pool navigation uses the existing gesture semantics > selects the mission root, traces the explicit pane and batches read/defer before focus once > sidebar action output 1`] = `
{
  "bytes": 44974,
  "sha256": "569a647b09d0812fe2764d27cf6fea0fb835f95e2d3c0d8f4d6ebe6649e74be6",
}
`;

exports[`pool navigation uses the existing gesture semantics > waits for a loading mission ancestor before navigating or mutating a loaded child > sidebar action output 1`] = `
{
  "bytes": 43157,
  "sha256": "9ae34d1bdac92356a8262cab04ba556fdf02fc0edc45b94a3d69712697debd1f",
}
`;

exports[`pool navigation uses the existing gesture semantics > waits for a loading mission ancestor before navigating or mutating a loaded child > sidebar action output 2`] = `
{
  "bytes": 43157,
  "sha256": "c62d5afa27d3a99726f66934b56ba1f4e5142176f1a367a2c5030811d0683efd",
}
`;

exports[`pool navigation uses the existing gesture semantics > waits without a mutation for unloaded rows and loads repeated clicks in one batch > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`pool navigation uses the existing gesture semantics > waits without a mutation for unloaded rows and loads repeated clicks in one batch > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > archives every closed row from the fold footer through the same outbox > sidebar action output 1`] = `
{
  "bytes": 45033,
  "sha256": "607687ed73ca91e632ef3c497ab0f4aa20da5fa4566720bb1cef398425109912",
}
`;

exports[`real pool row mutations and receipts > archives every closed row from the fold footer through the same outbox > sidebar action output 2`] = `
{
  "bytes": 37376,
  "sha256": "9d110226dc28af14bdbad9c6a7ee9fcb89ab033d0965b7cf67b15c4d410c6098",
}
`;

exports[`real pool row mutations and receipts > archives every closed row from the fold footer through the same outbox > sidebar action output 3`] = `
{
  "bytes": 37376,
  "sha256": "9d110226dc28af14bdbad9c6a7ee9fcb89ab033d0965b7cf67b15c4d410c6098",
}
`;

exports[`real pool row mutations and receipts > archives every closed row from the fold footer through the same outbox > sidebar action output 4`] = `
{
  "bytes": 41223,
  "sha256": "abcfd04ce9bf67f94681e0a5a215d2cb42a9df968122bcebc9bacca6b5532a7a",
}
`;

exports[`real pool row mutations and receipts > archives every closed row from the fold footer through the same outbox > sidebar action output 5`] = `
{
  "bytes": 45033,
  "sha256": "607687ed73ca91e632ef3c497ab0f4aa20da5fa4566720bb1cef398425109912",
}
`;

exports[`real pool row mutations and receipts > archives through the closed-fold dismiss, hides optimistically and returns on refusal > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > archives through the closed-fold dismiss, hides optimistically and returns on refusal > sidebar action output 2`] = `
{
  "bytes": 41166,
  "sha256": "27ba2fa03e3f1d2cbfdad72b37c3ebc14f9b73dc72c22263b4afcca3f6e60b1e",
}
`;

exports[`real pool row mutations and receipts > archives through the closed-fold dismiss, hides optimistically and returns on refusal > sidebar action output 3`] = `
{
  "bytes": 41166,
  "sha256": "27ba2fa03e3f1d2cbfdad72b37c3ebc14f9b73dc72c22263b4afcca3f6e60b1e",
}
`;

exports[`real pool row mutations and receipts > archives through the closed-fold dismiss, hides optimistically and returns on refusal > sidebar action output 4`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "bbb7c2724c44814c6637cf9b6d99e849935e1dfea85567a1e92fafbb40b47cf5",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 4`] = `
{
  "bytes": 44975,
  "sha256": "24f5df1eb92ba4cb4989af4faaca45b57b303d50e9d173809900220e94f8042e",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 5`] = `
{
  "bytes": 44975,
  "sha256": "01029d7048839c3416eac97c4379747c5262dd289be819be0bb8a2a1bef05ce3",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 6`] = `
{
  "bytes": 44975,
  "sha256": "45b797925747654e195e823143aa9298d58f107c825c4cab3bc9098959b8280d",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 7`] = `
{
  "bytes": 44975,
  "sha256": "45bf6334b5196335dcbfc025f05ab217b1744b86949f602efca19d2860246760",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 8`] = `
{
  "bytes": 44975,
  "sha256": "6de553b84998acd5762507fae317f94d78cbcbbda45fc5cc572124731f6eff8d",
}
`;

exports[`real pool row mutations and receipts > backfills missing sort keys through planReorderKeys and the existing outbox, then rewinds every refusal > sidebar action output 9`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > cancels Escape and whitespace edits; menu Rename uses the same editor > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > cancels Escape and whitespace edits; menu Rename uses the same editor > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > cancels Escape and whitespace edits; menu Rename uses the same editor > sidebar action output 3`] = `
{
  "bytes": 44939,
  "sha256": "d3532607c87b7ae2681caf53b93c0cf8d7dd6b748610b37d4220b6951a3b5ea2",
}
`;

exports[`real pool row mutations and receipts > cancels Escape and whitespace edits; menu Rename uses the same editor > sidebar action output 4`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > closes from Set status with the existing lifecycle action and rewinds a refusal > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > closes from Set status with the existing lifecycle action and rewinds a refusal > sidebar action output 2`] = `
{
  "bytes": 44945,
  "sha256": "1b992e89b2bb5110b62c902b527977364bae28d0f5265b696bd13787b53feda9",
}
`;

exports[`real pool row mutations and receipts > closes from Set status with the existing lifecycle action and rewinds a refusal > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (false) with only the moved row patch > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "43033cc6145768f9f8278fc1d25d2c0404dfed956be1a98523ae9947c27be522",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (false) with only the moved row patch > sidebar action output 2`] = `
{
  "bytes": 44978,
  "sha256": "c5c724fb848ffcbcf61db858b2feaa27fbe9b5e0e546577344bae366d87bcdfb",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (false) with only the moved row patch > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "43033cc6145768f9f8278fc1d25d2c0404dfed956be1a98523ae9947c27be522",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (true) with only the moved row patch > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "43033cc6145768f9f8278fc1d25d2c0404dfed956be1a98523ae9947c27be522",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (true) with only the moved row patch > sidebar action output 2`] = `
{
  "bytes": 44973,
  "sha256": "c26e64ff99014ff76cbf90d582637f327da41ad298ca767475b3060fce612587",
}
`;

exports[`real pool row mutations and receipts > crosses the pinned boundary (true) with only the moved row patch > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "43033cc6145768f9f8278fc1d25d2c0404dfed956be1a98523ae9947c27be522",
}
`;

exports[`real pool row mutations and receipts > dispatches Set status through the existing menu and outbox > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > dispatches Set status through the existing menu and outbox > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "ce52f8a583bbf207af8e5274b1c542f8006ee1001e9a56391e65e7a60e18ecf2",
}
`;

exports[`real pool row mutations and receipts > dispatches Set status through the existing menu and outbox > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > dispatches Snooze / defer through the existing menu and outbox > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > dispatches Snooze / defer through the existing menu and outbox > sidebar action output 2`] = `
{
  "bytes": 44973,
  "sha256": "9019dc46af0715b564e53eeb3a07c2aaaccca621194e4f0bf13f3d6e15a10a1f",
}
`;

exports[`real pool row mutations and receipts > dispatches Snooze / defer through the existing menu and outbox > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > hands the pool-resolved session to the same shared Handoff menu command > sidebar action output 1`] = `
{
  "bytes": 44360,
  "sha256": "cd43f56d1a34f85fe0aee0bc357017973a9464ae376da15fe6843e29a12d4137",
}
`;

exports[`real pool row mutations and receipts > hands the pool-resolved session to the same shared Handoff menu command > sidebar action output 2`] = `
{
  "bytes": 44360,
  "sha256": "cd43f56d1a34f85fe0aee0bc357017973a9464ae376da15fe6843e29a12d4137",
}
`;

exports[`real pool row mutations and receipts > keeps Bring back disabled with its explanation after the grace window > sidebar action output 1`] = `
{
  "bytes": 44977,
  "sha256": "f99bdf2bc609e06c52694f9738e47ca6f2781ff49c416a259a9b95c1bd0768e2",
}
`;

exports[`real pool row mutations and receipts > keeps Bring back disabled with its explanation after the grace window > sidebar action output 2`] = `
{
  "bytes": 44977,
  "sha256": "f99bdf2bc609e06c52694f9738e47ca6f2781ff49c416a259a9b95c1bd0768e2",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 1`] = `
{
  "bytes": 44923,
  "sha256": "ffc3f21bea5ef61eeca0d97b617a829140c57316e780ca1b6eb5deb872cd79ac",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 2`] = `
{
  "bytes": 44971,
  "sha256": "85a25b1d0ad86ec233cbfa990f46b1f3cfa7fa6d1f96fd7335c660be272e76d1",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 3`] = `
{
  "bytes": 44923,
  "sha256": "ffc3f21bea5ef61eeca0d97b617a829140c57316e780ca1b6eb5deb872cd79ac",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 4`] = `
{
  "bytes": 44923,
  "sha256": "d370041f3c570d14a093dd1272aad56bd37515804089acffbd447027979b0689",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 5`] = `
{
  "bytes": 44923,
  "sha256": "ffc3f21bea5ef61eeca0d97b617a829140c57316e780ca1b6eb5deb872cd79ac",
}
`;

exports[`real pool row mutations and receipts > marks an unread task read, clears deferral and unpins through the actual menu > sidebar action output 6`] = `
{
  "bytes": 44923,
  "sha256": "ffc3f21bea5ef61eeca0d97b617a829140c57316e780ca1b6eb5deb872cd79ac",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to mission through the existing placement action > sidebar action output 1`] = `
{
  "bytes": 45117,
  "sha256": "db9a31d7b44e715e8d00b23d9c497d06d91f83e25b4a7c8c7f2397796e63eb77",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to mission through the existing placement action > sidebar action output 2`] = `
{
  "bytes": 43206,
  "sha256": "6ba4d99aabc7c386dfb4f175f374c4af6890e127ef88e60b0dcceda26199428c",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to mission through the existing placement action > sidebar action output 3`] = `
{
  "bytes": 45117,
  "sha256": "db9a31d7b44e715e8d00b23d9c497d06d91f83e25b4a7c8c7f2397796e63eb77",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to own through the existing placement action > sidebar action output 1`] = `
{
  "bytes": 43135,
  "sha256": "eb740b65303063f9c135e22100d8cfd4d4443ffe625cd1fbeff8f5d59d133b00",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to own through the existing placement action > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > moves discovered work to own through the existing placement action > sidebar action output 3`] = `
{
  "bytes": 43135,
  "sha256": "eb740b65303063f9c135e22100d8cfd4d4443ffe625cd1fbeff8f5d59d133b00",
}
`;

exports[`real pool row mutations and receipts > offers the same sidebar menu vocabulary and resolves live cascade counts and members on open > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > offers the same sidebar menu vocabulary and resolves live cascade counts and members on open > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > opens the task page without changing the workspace pane > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > opens the task page without changing the workspace pane > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > pins immediately from the actual issue menu and returns to the original band on refusal > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > pins immediately from the actual issue menu and returns to the original band on refusal > sidebar action output 2`] = `
{
  "bytes": 44973,
  "sha256": "0e57196009b0f7bd1979c445780272613ccc98681c63c130d37bc982169d1386",
}
`;

exports[`real pool row mutations and receipts > pins immediately from the actual issue menu and returns to the original band on refusal > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > preserves archive and delete confirmation before enqueuing and rewinds both refusals > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > preserves archive and delete confirmation before enqueuing and rewinds both refusals > sidebar action output 2`] = `
{
  "bytes": 41185,
  "sha256": "c9269119236bc2cf50c29f76b06b7fe2c193d9e872a7ade05ff087a790c119bf",
}
`;

exports[`real pool row mutations and receipts > preserves archive and delete confirmation before enqueuing and rewinds both refusals > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > preserves archive and delete confirmation before enqueuing and rewinds both refusals > sidebar action output 4`] = `
{
  "bytes": 41185,
  "sha256": "c9269119236bc2cf50c29f76b06b7fe2c193d9e872a7ade05ff087a790c119bf",
}
`;

exports[`real pool row mutations and receipts > preserves archive and delete confirmation before enqueuing and rewinds both refusals > sidebar action output 5`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > renames inline on Enter, paints before the receipt and rewinds on refusal > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > renames inline on Enter, paints before the receipt and rewinds on refusal > sidebar action output 2`] = `
{
  "bytes": 44951,
  "sha256": "bd4b6f3a75a7bc41e595998225ca55ba03c006c9b7ffb50ead9510c8a750e0d4",
}
`;

exports[`real pool row mutations and receipts > renames inline on Enter, paints before the receipt and rewinds on refusal > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > retains an accepted rename until the echo, composes a later edit and rewinds only that edit > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > retains an accepted rename until the echo, composes a later edit and rewinds only that edit > sidebar action output 2`] = `
{
  "bytes": 44943,
  "sha256": "3414d2cff1a26c56bb51d4da481bc08ea899dc9841d8dbe5c762030830419903",
}
`;

exports[`real pool row mutations and receipts > retains an accepted rename until the echo, composes a later edit and rewinds only that edit > sidebar action output 3`] = `
{
  "bytes": 44967,
  "sha256": "391e2bc4fbaa226834cb55b5c38469644255cf7e24b5d71a430a3ce3fcc467d8",
}
`;

exports[`real pool row mutations and receipts > retains an accepted rename until the echo, composes a later edit and rewinds only that edit > sidebar action output 4`] = `
{
  "bytes": 44943,
  "sha256": "3414d2cff1a26c56bb51d4da481bc08ea899dc9841d8dbe5c762030830419903",
}
`;

exports[`real pool row mutations and receipts > sets colour and unread state through the shared menu actions > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > sets colour and unread state through the shared menu actions > sidebar action output 2`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > sets colour and unread state through the shared menu actions > sidebar action output 3`] = `
{
  "bytes": 44927,
  "sha256": "ec45f8f5b4e90c57d09c2694aaa9996a5a3eddae5c7de825c720bf6feb9b9d3a",
}
`;

exports[`real pool row mutations and receipts > sets colour and unread state through the shared menu actions > sidebar action output 4`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > treats eviction as absence, never requests the evicted row, and accepts readmission > sidebar action output 1`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > treats eviction as absence, never requests the evicted row, and accepts readmission > sidebar action output 2`] = `
{
  "bytes": 42416,
  "sha256": "771781bec76f052cf233e9c30214ae525023b0c31932e982271fe95ae8f366fd",
}
`;

exports[`real pool row mutations and receipts > treats eviction as absence, never requests the evicted row, and accepts readmission > sidebar action output 3`] = `
{
  "bytes": 44975,
  "sha256": "86df5d747253ec6118e1c4fcc0b5057189316697c4007ea0e03fbcd3de01aa70",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 1`] = `
{
  "bytes": 44989,
  "sha256": "f27ec02a52c720622ffad85eda9018820542c9f36ca5d48ad8001c7314d01ab5",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 2`] = `
{
  "bytes": 45033,
  "sha256": "6bba4ba13ad795775b6692d8a359d1f4bb45b0c9a30e34a21110b2399c8379ed",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 3`] = `
{
  "bytes": 44989,
  "sha256": "f27ec02a52c720622ffad85eda9018820542c9f36ca5d48ad8001c7314d01ab5",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 4`] = `
{
  "bytes": 45033,
  "sha256": "6bba4ba13ad795775b6692d8a359d1f4bb45b0c9a30e34a21110b2399c8379ed",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 5`] = `
{
  "bytes": 45033,
  "sha256": "1ccbb2d91222e1a0ac9d7baefd7050d8892666d9e67e320786319c2289449bfa",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 6`] = `
{
  "bytes": 45033,
  "sha256": "1ccbb2d91222e1a0ac9d7baefd7050d8892666d9e67e320786319c2289449bfa",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 7`] = `
{
  "bytes": 44989,
  "sha256": "8991cd4a54b40124997a5c0e2bf0a0a41383555d36a943f5b85c6275de33f3e2",
}
`;

exports[`real pool row mutations and receipts > tucks and brings back with the shared action and keeps a clicked closed row folded > sidebar action output 8`] = `
{
  "bytes": 45033,
  "sha256": "1ccbb2d91222e1a0ac9d7baefd7050d8892666d9e67e320786319c2289449bfa",
}
`;
